--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -5,22 +5,23 @@
             class="mat-elevation-z8 w-auto">
           
           <ng-container matColumnDef="height" sticky>
-            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>&nbsp;Height</th>
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion ion-ios-cube"></i>&nbsp;Height</th>
             <td mat-cell *matCellDef="let block" >
-              <mdb-badge (click)="openBlockDialog(block)" 
-              style="cursor: pointer" color="pink">{{block.height}}</mdb-badge>
+              <!-- <mdb-badge (click)="openBlockDialog(block)" 
+              style="cursor: pointer" color="pink">{{block.height}}</mdb-badge> -->
+              <button mat-raised-button style="cursor: pointer" color="accent" (click)="openBlockDialog(block)" selected>{{block.height}}</button>
             </td>
           </ng-container>
         
           <ng-container matColumnDef="transactions">
-            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clipboard"></i>&nbsp;Transactions</th>
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion ion-ios-paper"></i>&nbsp;Transactions</th>
             <td mat-cell *matCellDef="let block">
               {{block.txs}}
             </td>
           </ng-container>
       
           <ng-container matColumnDef="proposer">
-            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-contact"></i>&nbsp;Proposer</th>
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-ios-person"></i>&nbsp;Proposer</th>
             <td mat-cell *matCellDef="let block">
               <mat-chip-list>
                 <mat-chip color = "primary" selected (click)="openValidatorDialog( block.proposer)" style="cursor: pointer;">
@@ -31,7 +32,7 @@
           </ng-container>
       
           <ng-container matColumnDef="timestamp">
-            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>&nbsp;Timestamp</th>
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion ion-ios-timer"></i>&nbsp;Timestamp</th>
             <td mat-cell *matCellDef="let block">  
               {{block.time | ago | async }}
             </td>
