--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -3,31 +3,31 @@
   <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
     
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef><i class="ion-android-funnel"></i></th>
+      <th mat-header-cell *matHeaderCellDef><i class="ion ion-ios-funnel"></i></th>
       <td mat-cell *matCellDef="let proposal">
         {{proposal.proposal_id}}
       </td>
     </ng-container>
   
     <ng-container matColumnDef="title" sticky>
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-code"></i>&nbsp;Title</th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ios ion-ios-code"></i>&nbsp;Title</th>
       <td mat-cell *matCellDef="let proposal" mdbTooltip="{{proposal.proposal_content.value.title}}" placement="right">
         <!-- <span style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}}...</span> -->
-        <mdb-badge color="pink" style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}} ...</mdb-badge>
+        <button mat-raised-button style="cursor: pointer" color="accent" (click)="openGovDetailDialog(proposal)" selected>{{proposal.proposal_content.value.title | slice:0:20}}...</button>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-checkbox-outline"></i>&nbsp;Status</th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ios ion-ios-checkbox-outline"></i>&nbsp;Status</th>
       <td mat-cell *matCellDef="let proposal">
         <span *ngIf="proposal.proposal_status === 'Passed'">
-            <i class="ion-checkmark-circled success"></i>
+            <i class="ion ion-ios-checkmark-circle success"></i>
         </span>
         <span *ngIf="proposal.proposal_status === 'Rejected'">
-            <i class="ion-close-circled fail"></i>
+            <i class="ion ion-ios-close-circle fail"></i>
         </span>
         <span *ngIf="proposal.proposal_status === 'Voting Period'">
-            <i class="ion-minus-circled voting"></i>
+            <i class="ion ion-ios-remove-circle voting"></i>
         </span>
         <!-- <ng-template #elseStatus>
           <i class="ion-close-circled fail"></i>
@@ -37,7 +37,7 @@
     </ng-container>
 
     <ng-container matColumnDef="submitted">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-paper-airplane"></i>&nbsp;Submitted</th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion ion-ios-paper-plane"></i>&nbsp;Submitted</th>
       <td mat-cell *matCellDef="let proposal">  
         {{proposal.submit_time | date:"h:mm a, MMM d, y"}}
       </td>
@@ -51,14 +51,14 @@
     </ng-container> -->
 
     <ng-container matColumnDef="deposit">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-archive"></i>&nbsp;Deposit</th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion ion-ios-archive"></i>&nbsp;Deposit</th>
       <td mat-cell *matCellDef="let proposal">  
         {{proposal.total_deposit[0].amount/1e6 | number:".2-2"}} <span class="ticker">ATOM</span>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="depositEnd">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-load-c"></i>&nbsp;Deposit End</th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion ion-ios-calendar"></i>&nbsp;Deposit End</th>
         <td mat-cell *matCellDef="let proposal">  
           {{proposal.deposit_end_time | date:"h:mm a, MMM d, y"}}
         </td>
