--- a/src/app/components/popups/validator/validator.component.html
+++ b/src/app/components/popups/validator/validator.component.html
@@ -78,7 +78,7 @@
                           <ng-container matColumnDef="amount">
                             <th mat-header-cell *matHeaderCellDef> Amount </th>
                             <td mat-cell *matCellDef="let delegation"> 
-                              {{ delegation.shares | number:'.2-2' }}
+                              {{ delegation.shares/1e6 | number:'.0-0' }}
                             </td>
                           </ng-container>
                       
