--- a/src/app/components/explorer/blocks/blocks.component.html
+++ b/src/app/components/explorer/blocks/blocks.component.html
@@ -9,7 +9,7 @@
             <td mat-cell *matCellDef="let block" >
               <!-- <mdb-badge (click)="openBlockDialog(block)" 
               style="cursor: pointer" color="pink">{{block.height}}</mdb-badge> -->
-              <button mat-raised-button style="cursor: pointer" color="accent" (click)="openBlockDialog(block)" selected>{{block.height}}</button>
+              <button mat-raised-button style="cursor: pointer" color="accent" [routerLink]="block.height" selected>{{block.height}}</button>
             </td>
           </ng-container>
         
