--- a/src/app/components/explorer/validators/validator/validator.component.html
+++ b/src/app/components/explorer/validators/validator/validator.component.html
@@ -1,266 +1,7 @@
-<section>
-    <app-btn-close [link]="'validator/'+validator.operator_address" [dialogRef]="dialogRef"></app-btn-close>
-    <div class="popup-row row">
-        <!-- First column -->
-        <div class="px-0 p-lg-3 col-lg-6 col-md-12">
-          <mdb-card class="rounded-0 testimonial-card">
-                <!--Bakcground color-->
-                <div style="height: 120px;" class="validator-mb-card"></div>
-          
-                <!--Avatar-->
-                <div class="avatar mx-auto">
-                  <img 
-                    src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
-                    class="rounded-circle">
-                </div>
-          
-                <mdb-card-body>
-                  <!--Name-->
-                  <mdb-card-title>
-                    <h1>{{ validator.description.moniker }}</h1>
-                    <a *ngIf="validator.description.website" href="{{ validator.description.website }}" target=" "><i class="ion-social-chrome"></i></a>
-                  </mdb-card-title>
-                  <hr>
-                  <!--Quotation-->
-                  <p>
-                    <i class="fas fa-quote-left"></i>&nbsp;{{ validator.description.details }}
-                  </p>
-          
-                  <mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-2 pills-pink white mb-2'" [contentClass]="'card'">
-                    <mdb-tab heading="Operator address">
-                      <div class="row">
-                        <div class="col-12">
-                          <p>{{ validator.operator_address }}</p>
-                        </div>
-                      </div>
-                    </mdb-tab>
-          
-                    <mdb-tab heading="Delegator address">
-                      <div class="row">
-                        <div class="col-12">
-                          <p (click)="openDelegatorDialog(validator.account.value.address)"
-                              style="cursor:pointer;">
-                            {{ validator.account.value.address }}
-                          </p>
-                        </div>
-                      </div>
-                    </mdb-tab>
-                  </mdb-tabset>
-                </mdb-card-body>
-          </mdb-card>
-        </div>
-        <div class="px-0 p-lg-3 col-lg-6 col-md-12">
-          <!-- /.Panel -->
-          <!-- <div class="mb-5"> -->
-            <mdb-card alignment="left" class="rounded-0">
-              <mdb-card-header class="rounded-0">
-                <mdb-card-title>Delegations</mdb-card-title>
-              </mdb-card-header>
-              <mdb-card-body class="bg-transparent px-0 p-lg-3 col-12">
-                <div class="card-body">
-                  <div class="row table-responsive text-nowrap">
-                        <table mat-table [dataSource]="delegationsDataSource" class="table large-header">
-                          <ng-container matColumnDef="address">
-                            <th mat-header-cell *matHeaderCellDef> Address </th>
-                            <td (click)="openDelegatorDialog(delegation.delegator_address)"
-                                style="cursor:pointer;" 
-                                mat-cell 
-                                *matCellDef="let delegation">   
-                              <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( delegation.delegator_address ) : false; else elseVetoVoter">
-                                {{ (validatorsState | async).validatorsMap.get( delegation.delegator_address )}}
-                              </span>
-                              <ng-template #elseVetoVoter>
-                                {{ delegation.delegator_address }}
-                              </ng-template> 
-                            </td>
-                          </ng-container>
-                      
-                          <ng-container matColumnDef="amount">
-                            <th mat-header-cell *matHeaderCellDef> Amount </th>
-                            <td mat-cell *matCellDef="let delegation"> 
-                              {{ delegation.shares/1e6 | number:'.0-0' }}
-                            </td>
-                          </ng-container>
-                      
-                          <tr mat-header-row *matHeaderRowDef="delegationsDisplayedColumns"></tr>
-                          <tr mat-row *matRowDef="let row; columns: delegationsDisplayedColumns;"></tr>
-                        </table> 
-                        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-                  </div>
-                </div>
-              </mdb-card-body>            
-            </mdb-card>
-          <!-- </div> -->
-          <!-- /.Panel -->
-        </div>
-        <!-- /.First column -->
-        
-        <!-- Second column -->
-        <div class="px-0 p-lg-3 col-lg-6 col-md-12">
-          <!--Panel-->
-          <!-- <div class="mb-5"> -->
-            <mdb-card alignment="left" class="rounded-0">
-            <mdb-card-header class="rounded-0">
-              <mdb-card-title>At a Glance</mdb-card-title>
-            </mdb-card-header>
-            <mdb-card-body>
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="red">
-                      Rank
-                    </mdb-badge>
-                    <h4>{{ validator.rank }}</h4>
-                  </div>
-                  <div class="col-sm-4 col-12">
-                      <mdb-badge color="cyan">
-                        Voting Power
-                      </mdb-badge>
-                    <h4>{{ validator.tokens/1e6 | number:'.0-0' }}</h4>
-                  </div>
-                  <div class="col-sm-4 col-12">
-                      <mdb-badge color="amber darken-2">
-                          Delegators
-                      </mdb-badge>
-                    <h4>
-                      <span *ngIf="validator.delegations; else elseBlock">
-                        {{ validator.delegations.length | number:'.0-0' }}
-                      </span>
-                      <ng-template #elseBlock>
-                        0
-                      </ng-template>
-                    </h4>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="lime">
-                        Balance
-                    </mdb-badge>
-                    <h4>
-                      <span *ngIf="validator.account.type; else balanceElseBlock" 
-                              matTooltipPosition="above">
-                        {{ validator.account.value.coins[0].amount/1e6 | number:'.0-0'}}
-                      </span>
-                      <ng-template #balanceElseBlock>
-                        0
-                      </ng-template>
-                    </h4>
-                  </div>
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="purple darken-2">
-                        Rewards
-                    </mdb-badge>
-                    <h4 *ngIf="validator.rewards">
-                      {{validator.rewards[0].amount/1e6 | number:'.2-2'}}
-                    </h4>
-                  </div>
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="indigo">
-                      Outstanding Rewards
-                    </mdb-badge>
-                    <h4 *ngIf="validator.outstanding_rewards">
-                      {{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}} 
-                    </h4>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="teal">
-                      Commission
-                    </mdb-badge>
-                    <h4> {{ validator.commission?.rate | percent }} </h4>
-                  </div>
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="yellow darken-2">
-                      Commision Max
-                    </mdb-badge>
-                    <h4>{{ validator.commission?.max_rate | percent }}</h4>
-                  </div>
-                  <div class="col-sm-4 col-12">
-                    <mdb-badge color="brown">
-                      Commision Max Rate
-                    </mdb-badge>
-                    <h4>{{ validator.commission?.max_change_rate | percent }}</h4>
-                  </div>
-                </div>
-                <!-- <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Details</a> -->
-              </div>
-            </mdb-card-body>
-            </mdb-card>
-          <!-- </div> -->
-          <!--/.Panel-->
-        </div>
-        <div class="px-0 p-lg-3 col-lg-6 col-md-12">
-          <!-- Panel -->
-          <!-- <div class="mb-5"> -->
-            <mdb-card alignment="left" class="rounded-0">
-              <mdb-card-header class="rounded-0">
-                <mdb-card-title>Transactions</mdb-card-title>
-              </mdb-card-header>
-              <mdb-card-body class="px-0 p-lg-3 col-12">
-                <div class="card-body">
-                          <mat-tab-group (selectedTabChange)="onTabChange($event);">
-                            <mat-tab label="Staking">
-                              <table mat-table [dataSource]="accountDataSource" class="table large-header">
-                                <ng-container matColumnDef="hash">
-                                  <th mat-header-cell *matHeaderCellDef> Hash </th>
-                                  <td mat-cell *matCellDef="let tx">
-                                    <span (click)="openTxDialog(tx.txhash)" style="cursor: pointer;" >
-                                      {{ tx.txhash }}
-                                    </span>
-                                    <i  class="ion-ios-copy copy-button" 
-                                        style="cursor: pointer;" 
-                                        ngxClipboard [cbContent]="tx.txhash" 
-                                        (click)="onCopySuccess()">
-                                    </i>
-                                  </td>
-                                </ng-container>
-                            
-                                <ng-container matColumnDef="height">
-                                  <th mat-header-cell *matHeaderCellDef> Height </th>
-                                  <td mat-cell *matCellDef="let tx"> 
-                                    {{ tx.height }} 
-                                  </td>
-                                </ng-container>
-                            
-                                <tr mat-header-row *matHeaderRowDef="accountDisplayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: accountDisplayedColumns;"></tr>
-                              </table>
-                            </mat-tab>
-                            <mat-tab label="Transfer">
-                              <table mat-table [dataSource]="accountDataSource" class="table large-header">
-                                <ng-container matColumnDef="hash">
-                                  <th mat-header-cell *matHeaderCellDef> Hash </th>
-                                  <td mat-cell *matCellDef="let tx">
-                                    <span (click)="openTxDialogHash(tx.txhash)" style="cursor: pointer;" >
-                                      {{ tx.txhash }}
-                                    </span>
-                                    <i  class="ion-ios-copy copy-button" 
-                                        style="cursor: pointer;" 
-                                        ngxClipboard [cbContent]="tx.txhash" 
-                                        (click)="onCopySuccess()">
-                                    </i>
-                                  </td>
-                                </ng-container>
-                            
-                                <ng-container matColumnDef="height">
-                                  <th mat-header-cell *matHeaderCellDef> Height </th>
-                                  <td mat-cell *matCellDef="let tx"> 
-                                    {{ tx.height }} 
-                                  </td>
-                                </ng-container>
-                            
-                                <tr mat-header-row *matHeaderRowDef="accountDisplayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: accountDisplayedColumns;"></tr>
-                              </table>
-                            </mat-tab>
-                          </mat-tab-group>
-                        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-                </div>
-              </mdb-card-body>
-            </mdb-card>
-          <!-- </div> -->
-        </div>   
-  </div>
-</section>
+<div *ngIf="selectedValidator; else loadingValidator">
+  {{selectedValidator | json}}
+</div>
+<ng-template #loadingValidator>
+  loading validator...
+</ng-template>
+
