--- a/src/app/components/explorer/validators/validators.component.html
+++ b/src/app/components/explorer/validators/validators.component.html
@@ -1,4 +1,4 @@
-<app-chart-cards></app-chart-cards>
+<!-- <app-chart-cards></app-chart-cards> -->
 <div class="row" *ngIf="true; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
@@ -38,7 +38,7 @@
         <td mat-cell *matCellDef="let validator"> 
           <span>
             <mat-chip-list>
-              <mat-chip (click)="openValidatorDialog(validator)" class="chip validator-avatar is-128x128" color = "primary" selected>
+              <mat-chip  [routerLink]="validator.operator_address" class="chip validator-avatar is-128x128" color = "primary" selected>
                   <img  *ngIf="!validator.picture; else elseBlock" 
                         src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
                         alt="avatar"> 
