--- a/src/app/components/explorer/governance/governance.component.html
+++ b/src/app/components/explorer/governance/governance.component.html
@@ -13,7 +13,7 @@
       <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ios ion-ios-code"></i>&nbsp;Title</th>
       <td mat-cell *matCellDef="let proposal" mdbTooltip="{{proposal.proposal_content.value.title}}" placement="right">
         <!-- <span style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}}...</span> -->
-        <button mat-raised-button style="cursor: pointer" color="accent" (click)="openGovDetailDialog(proposal)" selected>{{proposal.proposal_content.value.title | slice:0:20}}...</button>
+        <button mat-raised-button style="cursor: pointer" color="accent" [routerLink]="proposal.proposal_id" selected>{{proposal.proposal_content.value.title | slice:0:20}}...</button>
       </td>
     </ng-container>
 
