--- a/src/app/components/faucet/faucet.component.html
+++ b/src/app/components/faucet/faucet.component.html
@@ -2,7 +2,7 @@
   <div class="jumbotron text-center card">
     <h2 class="card-title h2">
       Serving from <mat-chip class="chip" color = "primary" selected>{{((faucet$|async).address)}}</mat-chip><br>
-      Balance <mat-chip class="chip" color = "primary" selected>{{((faucet$|async).coins[0].amount | number:'.0-0')}} {{((faucet$|async).coins[0].denom)}}</mat-chip>
+      <!-- Balance <mat-chip class="chip" color = "primary" selected>{{((faucet$|async).coins[0].amount | number:'.0-0')}} {{((faucet$|async).coins[0].denom)}}</mat-chip> -->
     </h2>
     <hr class="my-4">
     <!-- Grid row -->
